Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/wildcards/6886247/T6886247_2.out
T6886247_2.java:12:28: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.type.captureof: 1, ?, E)
1 error
